// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div>
  <label
    htmlFor="field-id"
  >
    <span
      className="text-middle"
    >
      <strong>
        Field label
      </strong>
      <MandatoryFieldMarker />
    </span>
  </label>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
    <AlertSuccessIcon
      ariaLabel="valid_input"
      className="spacer-left text-middle"
    />
  </div>
  <div
    className="note abs-width-400"
  >
    My description
  </div>
</div>
`;

exports[`should render correctly: error under the input 1`] = `
<div>
  <label
    htmlFor="field-id"
  >
    <span
      className="text-middle"
    >
      <strong>
        Field label
      </strong>
      <MandatoryFieldMarker />
    </span>
  </label>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
    <div
      className="spacer-top"
      style={
        {
          "display": "flex",
        }
      }
    >
      <AlertErrorIcon
        className="text-middle"
      />
      <span
        className="little-spacer-left text-danger text-middle"
      >
        Field error message
      </span>
    </div>
  </div>
  <div
    className="note abs-width-400"
  >
    My description
  </div>
</div>
`;

exports[`should render correctly: no label 1`] = `
<div>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
    <AlertSuccessIcon
      ariaLabel="valid_input"
      className="spacer-left text-middle"
    />
  </div>
  <div
    className="note abs-width-400"
  >
    My description
  </div>
</div>
`;

exports[`should render correctly: with error 1`] = `
<div>
  <label
    htmlFor="field-id"
  >
    <span
      className="text-middle"
    >
      <strong>
        Field label
      </strong>
    </span>
  </label>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
    <AlertErrorIcon
      className="spacer-left text-middle"
    />
    <span
      className="little-spacer-left text-danger text-middle"
    >
      Field error message
    </span>
  </div>
  <div
    className="note abs-width-400"
  >
    <div>
      My description
    </div>
  </div>
</div>
`;

exports[`should render correctly: with help 1`] = `
<div>
  <label
    htmlFor="field-id"
  >
    <span
      className="text-middle"
    >
      <strong>
        Field label
      </strong>
      <MandatoryFieldMarker />
    </span>
    <HelpTooltip
      className="spacer-left"
      overlay="Help message"
    />
  </label>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
  </div>
  <div
    className="note abs-width-400"
  >
    My description
  </div>
</div>
`;
